// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template-ddl: CREATE SCHEMA per template (golden) > clinic v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."doctors" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "specialty" text NOT NULL,
  "license_no" text,
  "years_practising" integer,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "doctors_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."doctors" (created_at DESC);
CREATE UNIQUE INDEX "doctors_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."doctors" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."nurses" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "ward" text,
  "shift" text,
  "license_no" text,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "nurses_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."nurses" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."staff" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "position" text NOT NULL,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "staff_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."staff" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."patients" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "dob" date,
  "blood_type" text,
  "allergies" text,
  "primary_doctor_name" text,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "patients_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."patients" (created_at DESC);"
`;

exports[`template-ddl: CREATE SCHEMA per template (golden) > hospital v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."directors" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "directors_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."directors" (created_at DESC);
CREATE UNIQUE INDEX "directors_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."directors" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."doctors" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "specialty" text NOT NULL,
  "license_no" text,
  "years_practising" integer,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "doctors_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."doctors" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."nurses" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "ward" text,
  "shift" text,
  "license_no" text,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "nurses_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."nurses" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."staff" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "department" text,
  "position" text NOT NULL,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "staff_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."staff" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."patients" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "dob" date,
  "blood_type" text,
  "allergies" text,
  "admission_date" date,
  "ward" text,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "patients_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."patients" (created_at DESC);"
`;

exports[`template-ddl: CREATE SCHEMA per template (golden) > hotel v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "owners_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (created_at DESC);
CREATE UNIQUE INDEX "owners_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "managers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (created_at DESC);
CREATE UNIQUE INDEX "managers_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."reception" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "shift" text,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "reception_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."reception" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."housekeeping" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "assigned_floor" integer,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "housekeeping_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."housekeeping" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."guests" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "room_number" text,
  "check_in" date,
  "check_out" date,
  "id_document_no" text,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "guests_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."guests" (created_at DESC);"
`;

exports[`template-ddl: CREATE SCHEMA per template (golden) > restaurant v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "owners_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (created_at DESC);
CREATE UNIQUE INDEX "owners_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "managers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (created_at DESC);
CREATE UNIQUE INDEX "managers_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."chefs" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "cuisine_specialty" text,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "chefs_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."chefs" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."waiters" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "shift" text,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "waiters_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."waiters" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "customers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (created_at DESC);"
`;

exports[`template-ddl: CREATE SCHEMA per template (golden) > shop v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "owners_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (created_at DESC);
CREATE UNIQUE INDEX "owners_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."employees" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "position" text NOT NULL,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "employees_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."employees" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "customers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (created_at DESC);"
`;

exports[`template-ddl: CREATE SCHEMA per template (golden) > store v1 1`] = `
"CREATE SCHEMA "client_a1b2c3d4e5f60123456789abcdef0123";

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"._meta (
  template_version_applied integer NOT NULL,
  created_at timestamptz NOT NULL DEFAULT now()
);

INSERT INTO "client_a1b2c3d4e5f60123456789abcdef0123"._meta (template_version_applied) VALUES (1);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "owners_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" (created_at DESC);
CREATE UNIQUE INDEX "owners_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."owners" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "managers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" (created_at DESC);
CREATE UNIQUE INDEX "managers_singleton" ON "client_a1b2c3d4e5f60123456789abcdef0123"."managers" ((true));

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."employees" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  "position" text NOT NULL,
  "hire_date" date,
  "active" boolean NOT NULL DEFAULT true,
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "employees_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."employees" (created_at DESC);

CREATE TABLE "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  display_name    text NOT NULL,
  email           citext,
  phone           text,
  notes           text,
  created_at      timestamptz NOT NULL DEFAULT now(),
  updated_at      timestamptz NOT NULL DEFAULT now(),
  created_by      uuid NOT NULL REFERENCES public.admins(id),
  UNIQUE NULLS NOT DISTINCT (email)
);
CREATE INDEX "customers_created_at_idx" ON "client_a1b2c3d4e5f60123456789abcdef0123"."customers" (created_at DESC);"
`;
